--- a/QBert/QBert.vcxproj
+++ b/QBert/QBert.vcxproj
@@ -344,8 +344,11 @@ xcopy "$(SolutionDir)3rdParty\SDL2_mixer\lib\$(PlatformTarget)\*.dll" "$(OutputP
     <ClCompile Include="CoilyComponent.cpp" />
     <ClCompile Include="Command.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameManagerComponent.cpp" />
     <ClCompile Include="GraphComponent.cpp" />
+    <ClCompile Include="GreenEnemyComponent.cpp" />
     <ClCompile Include="LevelConstructor.cpp" />
+    <ClCompile Include="PurpleEnemyComponent.cpp" />
     <ClCompile Include="QBert.cpp" />
     <ClCompile Include="QBertComponent.cpp" />
   </ItemGroup>
@@ -353,8 +356,11 @@ xcopy "$(SolutionDir)3rdParty\SDL2_mixer\lib\$(PlatformTarget)\*.dll" "$(OutputP
     <ClInclude Include="CoilyComponent.h" />
     <ClInclude Include="Command.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GameManagerComponent.h" />
     <ClInclude Include="GraphComponent.h" />
+    <ClInclude Include="GreenEnemyComponent.h" />
     <ClInclude Include="LevelConstructor.h" />
+    <ClInclude Include="PurpleEnemyComponent.h" />
     <ClInclude Include="QBertComponent.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
